--- a/gnocchi/tests/functional/gabbits/aggregation.yaml
+++ b/gnocchi/tests/functional/gabbits/aggregation.yaml
@@ -3,16 +3,17 @@ fixtures:
 
 defaults:
   request_headers:
-      x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-      x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+    content-type: application/json
+    # User foobar
+    authorization: "basic Zm9vYmFyOg=="
 
 tests:
     - name: create archive policy
       desc: for later use
       POST: /v1/archive_policy
       request_headers:
-          content-type: application/json
-          x-roles: admin
+        # User admin
+        authorization: "basic YWRtaW46"
       data:
           name: low
           definition:
@@ -143,10 +144,6 @@ tests:
 
     - name: post a resource
       POST: /v1/resource/generic
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       data:
           id: bcd3441c-b5aa-4d1b-af9a-5a72322bb269
           metrics:
@@ -156,10 +153,6 @@ tests:
 
     - name: post another resource
       POST: /v1/resource/generic
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       data:
           id: 1b0a8345-b279-4cb8-bd7a-2cb83193624f
           metrics:
@@ -169,10 +162,6 @@ tests:
 
     - name: push measurements to resource 1
       POST: /v1/resource/generic/bcd3441c-b5aa-4d1b-af9a-5a72322bb269/metric/agg_meter/measures
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       data:
           - timestamp: "2015-03-06T14:33:57"
             value: 43.1
@@ -182,10 +171,6 @@ tests:
 
     - name: push measurements to resource 2
       POST: /v1/resource/generic/1b0a8345-b279-4cb8-bd7a-2cb83193624f/metric/agg_meter/measures
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       data:
           - timestamp: "2015-03-06T14:33:57"
             value: 3.1
@@ -197,10 +182,6 @@ tests:
 
     - name: get measure aggregates by granularity from resources with refresh
       POST: /v1/aggregation/resource/generic/metric/agg_meter?granularity=1&refresh=true
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       response_json_paths:
         $:
           - ['2015-03-06T14:33:57+00:00', 1.0, 23.1]
@@ -208,10 +189,6 @@ tests:
 
     - name: get measure aggregates by granularity from resources
       POST: /v1/aggregation/resource/generic/metric/agg_meter?granularity=1
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       poll:
           count: 10
           delay: 1
@@ -222,10 +199,6 @@ tests:
 
     - name: get measure aggregates by granularity from resources and resample
       POST: /v1/aggregation/resource/generic/metric/agg_meter?granularity=1&resample=60
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       response_json_paths:
         $:
           - ['2015-03-06T14:33:00+00:00', 60.0, 23.1]
@@ -233,28 +206,16 @@ tests:
 
     - name: get measure aggregates by granularity from resources and bad resample
       POST: /v1/aggregation/resource/generic/metric/agg_meter?resample=abc
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       status: 400
 
     - name: get measure aggregates by granularity from resources and resample no granularity
       POST: /v1/aggregation/resource/generic/metric/agg_meter?resample=60
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       status: 400
       response_strings:
         - A granularity must be specified to resample
 
     - name: get measure aggregates by granularity with timestamps from resources
       POST: /v1/aggregation/resource/generic/metric/agg_meter?start=2015-03-06T15:33:57%2B01:00&stop=2015-03-06T15:34:00%2B01:00
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       poll:
           count: 10
           delay: 1
@@ -265,10 +226,6 @@ tests:
 
     - name: get measure aggregates by granularity from resources and reaggregate
       POST: /v1/aggregation/resource/generic/metric/agg_meter?granularity=1&reaggregation=min
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       poll:
           count: 10
           delay: 1
@@ -279,10 +236,6 @@ tests:
 
     - name: get measure aggregates from resources with fill zero
       POST: /v1/aggregation/resource/generic/metric/agg_meter?granularity=1&fill=0
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       response_json_paths:
         $:
           - ['2015-03-06T14:33:57+00:00', 1.0, 23.1]
@@ -298,44 +251,24 @@ tests:
 
     - name: get measure aggregates with wrong metric_name
       POST: /v1/aggregation/resource/generic/metric/notexists
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       status: 200
       response_json_paths:
         $.`len`: 0
 
     - name: get measure aggregates with wrong resource
       POST: /v1/aggregation/resource/notexits/metric/agg_meter
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       status: 404
       response_strings:
           - Resource type notexits does not exist
 
     - name: get measure aggregates with wrong path
       POST: /v1/aggregation/re/generic/metric/agg_meter
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       status: 404
 
     - name: get measure aggregates with wrong path 2
       POST: /v1/aggregation/resource/generic/notexists/agg_meter
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       status: 404
 
     - name: get measure aggregates with no resource name
       POST: /v1/aggregation/resource/generic/metric
-      request_headers:
-          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
-          content-type: application/json
       status: 405
