--- a/gnocchi/tests/functional/gabbits/resource-type.yaml
+++ b/gnocchi/tests/functional/gabbits/resource-type.yaml
@@ -8,8 +8,9 @@ fixtures:
 
 defaults:
   request_headers:
-      x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-      x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+    # User foobar
+    authorization: "basic Zm9vYmFyOg=="
+    content-type: application/json
 
 tests:
 
@@ -25,15 +26,13 @@ tests:
       POST: $LAST_URL
       data:
           name: my_custom_resource
-      request_headers:
-          content-type: application/json
       status: 403
 
     - name: post resource type with existing name
       POST: /v1/resource_type
       request_headers:
-          x-roles: admin
-          content-type: application/json
+        # User admin
+        authorization: "basic YWRtaW46"
       data:
           name: my_custom_resource
           attributes:
@@ -44,8 +43,8 @@ tests:
     - name: post resource type bad string
       POST: $LAST_URL
       request_headers:
-          x-roles: admin
-          content-type: application/json
+        # User admin
+        authorization: "basic YWRtaW46"
       data:
           name: my_custom_resource
           attributes:
@@ -65,8 +64,8 @@ tests:
     - name: post resource type bad min_length value
       POST: $LAST_URL
       request_headers:
-          x-roles: admin
-          content-type: application/json
+        # User admin
+        authorization: "basic YWRtaW46"
       data:
           name: my_custom_resource
           attributes:
@@ -80,8 +79,8 @@ tests:
     - name: post resource type bad min value
       POST: $LAST_URL
       request_headers:
-          x-roles: admin
-          content-type: application/json
+        # User admin
+        authorization: "basic YWRtaW46"
       data:
           name: my_custom_resource
           attributes:
@@ -97,8 +96,8 @@ tests:
     - name: post resource type
       POST: $LAST_URL
       request_headers:
-          x-roles: admin
-          content-type: application/json
+        # User admin
+        authorization: "basic YWRtaW46"
       data:
           name: my_custom_resource
           attributes:
@@ -226,8 +225,6 @@ tests:
 
     - name: post invalid resource
       POST: /v1/resource/my_custom_resource
-      request_headers:
-          content-type: application/json
       data:
           id: d11edfca-4393-4fda-b94d-b05a3a1b3747
           name: toolong!!!
@@ -241,8 +238,6 @@ tests:
 
     - name: post invalid resource uuid
       POST: $LAST_URL
-      request_headers:
-          content-type: application/json
       data:
           id: d11edfca-4393-4fda-b94d-b05a3a1b3747
           name: too
@@ -258,8 +253,6 @@ tests:
 
     - name: post custom resource
       POST: $LAST_URL
-      request_headers:
-          content-type: application/json
       data:
           id: d11edfca-4393-4fda-b94d-b05a3a1b3747
           name: bar
@@ -274,8 +267,6 @@ tests:
 
     - name: patch custom resource
       PATCH: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747
-      request_headers:
-          content-type: application/json
       data:
           name: foo
       status: 200
@@ -288,8 +279,6 @@ tests:
 
     - name: get resource
       GET: $LAST_URL
-      request_headers:
-          content-type: application/json
       response_json_paths:
           $.id: d11edfca-4393-4fda-b94d-b05a3a1b3747
           $.name: foo
@@ -299,8 +288,6 @@ tests:
 
     - name: post resource with default
       POST: /v1/resource/my_custom_resource
-      request_headers:
-          content-type: application/json
       data:
           id: c4110aec-6e5c-43fa-b8c5-ffdfbca3ce59
           name: foo
@@ -315,8 +302,6 @@ tests:
 
     - name: list resource history
       GET: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747/history?sort=revision_end:asc-nullslast
-      request_headers:
-          content-type: application/json
       response_json_paths:
           $.`len`: 2
           $[0].id: d11edfca-4393-4fda-b94d-b05a3a1b3747
@@ -331,7 +316,8 @@ tests:
     - name: post a new resource attribute
       PATCH: /v1/resource_type/my_custom_resource
       request_headers:
-          x-roles: admin
+          # User admin
+          authorization: "basic YWRtaW46"
           content-type: application/json-patch+json
       data:
         - op: add
@@ -444,7 +430,8 @@ tests:
     - name: post a new resource attribute with missing fill
       PATCH: /v1/resource_type/my_custom_resource
       request_headers:
-          x-roles: admin
+          # User admin
+          authorization: "basic YWRtaW46"
           content-type: application/json-patch+json
       data:
         - op: add
@@ -460,7 +447,9 @@ tests:
     - name: post a new resource attribute with incorrect fill
       PATCH: /v1/resource_type/my_custom_resource
       request_headers:
-          x-roles: admin
+      request_headers:
+          # User admin
+          authorization: "basic YWRtaW46"
           content-type: application/json-patch+json
       data:
         - op: add
@@ -534,8 +523,6 @@ tests:
 
     - name: control new attributes of existing resource
       GET: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747
-      request_headers:
-          content-type: application/json
       status: 200
       response_json_paths:
           $.id: d11edfca-4393-4fda-b94d-b05a3a1b3747
@@ -549,8 +536,6 @@ tests:
 
     - name: control new attributes of existing resource history
       GET: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747/history?sort=revision_end:asc-nullslast
-      request_headers:
-          content-type: application/json
       response_json_paths:
           $.`len`: 2
           $[0].id: d11edfca-4393-4fda-b94d-b05a3a1b3747
@@ -575,7 +560,8 @@ tests:
     - name: add/delete the same resource attribute
       PATCH: /v1/resource_type/my_custom_resource
       request_headers:
-          x-roles: admin
+          # User admin
+          authorization: "basic YWRtaW46"
           content-type: application/json-patch+json
       data:
         - op: add
@@ -647,7 +633,8 @@ tests:
     - name: delete/add the same resource attribute
       PATCH: /v1/resource_type/my_custom_resource
       request_headers:
-          x-roles: admin
+          # User admin
+          authorization: "basic YWRtaW46"
           content-type: application/json-patch+json
       data:
         - op: remove
@@ -666,7 +653,8 @@ tests:
     - name: patch a resource attribute replace
       PATCH: /v1/resource_type/my_custom_resource
       request_headers:
-          x-roles: admin
+          # User admin
+          authorization: "basic YWRtaW46"
           content-type: application/json-patch+json
       data:
         - op: replace
@@ -684,7 +672,8 @@ tests:
     - name: patch a resource attribute type not exist
       PATCH: /v1/resource_type/my_custom_resource
       request_headers:
-          x-roles: admin
+          # User admin
+          authorization: "basic YWRtaW46"
           content-type: application/json-patch+json
       data:
         - op: add
@@ -699,7 +688,8 @@ tests:
     - name: patch a resource attribute type unknown
       PATCH: /v1/resource_type/my_custom_resource
       request_headers:
-          x-roles: admin
+          # User admin
+          authorization: "basic YWRtaW46"
           content-type: application/json-patch+json
       data:
         - op: remove
@@ -713,7 +703,8 @@ tests:
     - name: delete in use resource_type
       DELETE: /v1/resource_type/my_custom_resource
       request_headers:
-        x-roles: admin
+        # User admin
+        authorization: "basic YWRtaW46"
       status: 400
       response_strings:
           - Resource type my_custom_resource is still in use
@@ -723,13 +714,15 @@ tests:
     - name: delete the resource
       DELETE: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747
       request_headers:
-        x-roles: admin
+        # User admin
+        authorization: "basic YWRtaW46"
       status: 204
 
     - name: delete the second resource
       DELETE: /v1/resource/my_custom_resource/c4110aec-6e5c-43fa-b8c5-ffdfbca3ce59
       request_headers:
-        x-roles: admin
+        # User admin
+        authorization: "basic YWRtaW46"
       status: 204
 
 # Now we can deleted the type
@@ -737,19 +730,20 @@ tests:
     - name: delete the custom resource type
       DELETE: /v1/resource_type/my_custom_resource
       request_headers:
-        x-roles: admin
+        # User admin
+        authorization: "basic YWRtaW46"
       status: 204
 
     - name: delete non-existing custom resource type
       DELETE: $LAST_URL
       request_headers:
-        x-roles: admin
+        authorization: "basic YWRtaW46"
       status: 404
 
     - name: delete missing custom resource type utf8
       DELETE: /v1/resource_type/%E2%9C%94%C3%A9%C3%B1%E2%98%83
       request_headers:
-        x-roles: admin
+        authorization: "basic YWRtaW46"
       status: 404
       response_strings:
           - Resource type ✔éñ☃ does not exist
@@ -759,8 +753,7 @@ tests:
     - name: post resource type again
       POST: /v1/resource_type
       request_headers:
-          x-roles: admin
-          content-type: application/json
+        authorization: "basic YWRtaW46"
       data:
           name: my_custom_resource
       status: 201
@@ -768,5 +761,5 @@ tests:
     - name: delete the custom resource type again
       DELETE: /v1/resource_type/my_custom_resource
       request_headers:
-        x-roles: admin
+        authorization: "basic YWRtaW46"
       status: 204
