--- a/gnocchi/tests/functional/gabbits/search-metric.yaml
+++ b/gnocchi/tests/functional/gabbits/search-metric.yaml
@@ -8,16 +8,17 @@ fixtures:
 
 defaults:
   request_headers:
-      x-user-id: 0fbb231484614b1a80131fc22f6afc9c
-      x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+    # User foobar
+    authorization: "basic Zm9vYmFyOg=="
+    content-type: application/json
 
 tests:
     - name: create archive policy
       desc: for later use
       POST: /v1/archive_policy
       request_headers:
-        content-type: application/json
-        x-roles: admin
+        # User admin
+        authorization: "basic YWRtaW46"
       data:
         name: high
         definition:
@@ -31,8 +32,6 @@ tests:
 
     - name: create metric
       POST: /v1/metric
-      request_headers:
-        content-type: application/json
       data:
         archive_policy_name: high
       status: 201
@@ -40,8 +39,6 @@ tests:
     - name: post measures
       desc: for later use
       POST: /v1/batch/metrics/measures
-      request_headers:
-        content-type: application/json
       data:
         $RESPONSE['$.id']:
             - timestamp: "2014-10-06T14:34:12"
@@ -78,24 +75,18 @@ tests:
 
     - name: search with one correct granularity
       POST: /v1/search/metric?metric_id=$HISTORY['get metric id'].$RESPONSE['$[0].id']&granularity=1s
-      request_headers:
-        content-type: application/json
       data:
           "=": 12
       status: 200
 
     - name: search with multiple correct granularities
       POST: /v1/search/metric?metric_id=$HISTORY['get metric id'].$RESPONSE['$[0].id']&granularity=1second&granularity=2s
-      request_headers:
-        content-type: application/json
       data:
           "=": 12
       status: 200
 
     - name: search with correct and incorrect granularities
       POST: /v1/search/metric?metric_id=$HISTORY['get metric id'].$RESPONSE['$[0].id']&granularity=1s&granularity=300
-      request_headers:
-        content-type: application/json
       data:
           "=": 12
       status: 400
@@ -104,8 +95,6 @@ tests:
 
     - name: search with incorrect granularity
       POST: /v1/search/metric?metric_id=$HISTORY['get metric id'].$RESPONSE['$[0].id']&granularity=300
-      request_headers:
-        content-type: application/json
       data:
           "=": 12
       status: 400
@@ -114,8 +103,6 @@ tests:
 
     - name: search measure with wrong start
       POST: /v1/search/metric?metric_id=$HISTORY['get metric id'].$RESPONSE['$[0].id']&start=foobar
-      request_headers:
-        content-type: application/json
       data:
         ∧:
           - ≥: 1000
@@ -125,16 +112,12 @@ tests:
 
     - name: create metric 2
       POST: /v1/metric
-      request_headers:
-        content-type: application/json
       data:
         archive_policy_name: "high"
       status: 201
 
     - name: search measure with wrong stop
       POST: /v1/search/metric?metric_id=$RESPONSE['$.id']&stop=foobar
-      request_headers:
-        content-type: application/json
       data:
         ∧:
           - ≥: 1000
